[gd_scene load_steps=2 format=3 uid="uid://6iscn0kivoef"]

[ext_resource type="Script" uid="uid://cudrldbgx6t0k" path="res://addons/TaskRunner/Dock/TaskRunsTab/TaskRunsTab.gd" id="1_jo131"]

[node name="MainPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jo131")

[node name="SelectedTaskRun" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="TaskRunsSplit" type="HSplitContainer" parent="SelectedTaskRun"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogsContainer" type="VBoxContainer" parent="SelectedTaskRun/TaskRunsSplit"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LogsHeader" type="Label" parent="SelectedTaskRun/TaskRunsSplit/LogsContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Logs"

[node name="TaskRunLogs" type="CodeEdit" parent="SelectedTaskRun/TaskRunsSplit/LogsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3
editable = false
gutters_draw_line_numbers = true

[node name="MessagesContainer" type="VBoxContainer" parent="SelectedTaskRun/TaskRunsSplit"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MessagesHeader" type="Label" parent="SelectedTaskRun/TaskRunsSplit/MessagesContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Messages"

[node name="TaskRunMessages" type="CodeEdit" parent="SelectedTaskRun/TaskRunsSplit/MessagesContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3
editable = false
gutters_draw_line_numbers = true
